<resources>
    <string name="app_name">NewWeatherApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Sunrise">Sunrice</string>
    <string name="Sunset">Sunset</string>
    <string name="Day_time">Day_time</string>
    <string name="Wind">Wind</string>
    <string name="Pressure">Pressure</string>
    <string name="humidity">Humidity</string>
</resources>