<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.weather.WeatherFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/fond_cv"
        android:layout_width="414dp"
        android:layout_height="500dp"
        app:cardCornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="412dp"
            android:layout_height="500dp">

            <TextView
                android:id="@+id/day_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20sp"
                android:textColor="@color/grey"
                android:textSize="15sp"
                tools:text="Friday, 17 december 2021 | 14:00"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <Button
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="260dp"
                android:background="@drawable/oval_blue"
                android:textAllCaps="false"
                android:textColor="@color/holo_blue"
                tools:text="Bishkek"
                android:drawableEnd="@drawable/ic_location"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <ImageView
                android:id="@+id/weather_define_im"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/define"
                android:layout_marginTop="90dp"
                android:layout_marginStart="60dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/weather_define_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="18sp"
                tools:text="Sunny"
                android:layout_marginStart="55dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/weather_define_im"/>

            <TextView
                android:id="@+id/temperature_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="75dp"
                android:layout_marginTop="70dp"
                android:textColor="@color/black"
                android:textSize="40sp"
                tools:text="33"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/weather_define_im"/>


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="70dp"
                android:background="@drawable/c"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/temperature_tv"/>

            <TextView
                android:id="@+id/max_temp_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:layout_marginEnd="50dp"
                tools:text="33"
                app:drawableEndCompat="@drawable/c"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>


            <TextView
                android:id="@+id/mini_temp_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                android:layout_marginTop="5dp"
                tools:text="27"
                app:drawableEndCompat="@drawable/c"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/max_temp_tv"/>

            <ImageView
                android:id="@+id/humidity_im"
                android:layout_width="40dp"
                android:background="@drawable/humidity"
                android:layout_height="40dp"
                android:layout_marginTop="40dp"
                android:layout_marginStart="60dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/weather_define_tv"/>

            <TextView
                android:id="@+id/humidity_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="65dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                tools:text="49%"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/humidity_im"/>

            <TextView
                android:id="@+id/humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:textColor="@color/grey"
                android:textSize="10sp"
                android:text="@string/humidity"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/humidity_tv"/>

            <ImageView
                android:id="@+id/pressure_im"
                android:layout_width="40dp"
                android:background="@drawable/pressure"
                android:layout_height="40dp"
                android:layout_marginTop="195dp"
                android:layout_marginStart="85dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/humidity_im"/>

            <TextView
                android:id="@+id/pressure_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                tools:text="1,007mBar"
                app:layout_constraintStart_toEndOf="@+id/humidity_tv"
                app:layout_constraintTop_toBottomOf="@+id/pressure_im"/>

            <TextView
                android:id="@+id/pressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="85dp"
                android:textColor="@color/grey"
                android:textSize="11sp"
                android:text="@string/Pressure"
                app:layout_constraintStart_toEndOf="@+id/humidity"
                app:layout_constraintTop_toBottomOf="@+id/pressure_tv"/>

            <ImageView
                android:id="@+id/wind_im"
                android:layout_width="40dp"
                android:background="@drawable/wind"
                android:layout_height="40dp"
                android:layout_marginTop="195dp"
                android:layout_marginStart="85dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/pressure_im"/>

            <TextView
                android:id="@+id/wind_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="45dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                tools:text="23 km/h"
                app:layout_constraintTop_toBottomOf="@id/wind_im"
                app:layout_constraintStart_toEndOf="@+id/pressure_tv"/>

            <TextView
                android:id="@+id/wind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="90dp"
                android:textColor="@color/grey"
                android:textSize="11sp"
                android:text="@string/Wind"
                app:layout_constraintTop_toBottomOf="@id/wind_tv"
                app:layout_constraintStart_toEndOf="@+id/pressure"/>

            <ImageView
                android:id="@+id/sunrise_im"
                android:layout_width="40dp"
                android:background="@drawable/sunrise"
                android:layout_height="40dp"
                android:layout_marginTop="40dp"
                android:layout_marginStart="60dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/humidity"/>

            <TextView
                android:id="@+id/sunrise_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="5dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                tools:text="6:03 AM"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sunrise_im"/>

            <TextView
                android:id="@+id/sunrise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="65dp"
                android:textColor="@color/grey"
                android:textSize="11sp"
                android:text="@string/Sunrise"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sunrise_tv"/>

            <ImageView
                android:id="@+id/sunset_im"
                android:layout_width="40dp"
                android:background="@drawable/sunset"
                android:layout_height="40dp"
                android:layout_marginTop="35dp"
                android:layout_marginStart="85dp"
                app:layout_constraintStart_toEndOf="@id/sunrise_im"
                app:layout_constraintTop_toBottomOf="@id/pressure"/>

            <TextView
                android:id="@+id/sunset_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="5dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                tools:text="7:05 PM"
                app:layout_constraintTop_toBottomOf="@id/sunset_im"
                app:layout_constraintStart_toEndOf="@id/sunrise_tv"/>

            <TextView
                android:id="@+id/sunset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="90dp"
                android:textColor="@color/grey"
                android:textSize="11sp"
                android:text="@string/Sunset"
                app:layout_constraintTop_toBottomOf="@id/sunset_tv"
                app:layout_constraintStart_toEndOf="@id/sunrise"/>

            <ImageView
                android:id="@+id/day_time_im"
                android:layout_width="40dp"
                android:background="@drawable/sand_clock"
                android:layout_height="40dp"
                android:layout_marginTop="35dp"
                android:layout_marginStart="125dp"
                app:layout_constraintStart_toStartOf="@id/sunset_im"
                app:layout_constraintTop_toBottomOf="@id/wind"/>

            <TextView
                android:id="@+id/day_time_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="5dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                tools:text="13h 1m"
                app:layout_constraintTop_toBottomOf="@id/day_time_im"
                app:layout_constraintStart_toEndOf="@id/sunset_tv"/>

            <TextView
                android:id="@+id/day_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="85dp"
                android:textColor="@color/grey"
                android:textSize="11sp"
                android:text="@string/Day_time"
                app:layout_constraintTop_toBottomOf="@id/day_time_tv"
                app:layout_constraintStart_toEndOf="@id/sunset"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


    <ImageView
        android:id="@+id/sky_im"
        android:layout_width="420dp"
        android:layout_height="280dp"
        android:background="@drawable/sky"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/sun"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="300dp"
        android:background="@drawable/sun"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/clouds_im"
        android:layout_width="400dp"
        android:layout_height="100dp"
        android:background="@drawable/clouds"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/city_im"
        android:layout_width="420dp"
        android:layout_height="260dp"
        android:background="@drawable/city"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>